[gd_scene load_steps=70 format=3 uid="uid://5sewixaw5qvv"]

[ext_resource type="Texture2D" uid="uid://bhwvv4kfrjw2e" path="res://assets/Filler graphics/CyanKnight.png" id="1_2khcx"]
[ext_resource type="Script" path="res://Scripts/Enemy.gd" id="1_ha54x"]
[ext_resource type="Texture2D" uid="uid://cyvqnph0snnkd" path="res://assets/Filler graphics/Tombstones.png" id="3_t4hes"]
[ext_resource type="Texture2D" uid="uid://dksc1anrrjfr1" path="res://assets/HP back.png" id="4_1qivc"]
[ext_resource type="Texture2D" uid="uid://dsrku5ihrwgye" path="res://assets/Filler graphics/SwordsmanCyan.png" id="4_b7tuk"]
[ext_resource type="Texture2D" uid="uid://hluqty1pngvc" path="res://assets/HP outside.png" id="5_fdwcg"]
[ext_resource type="Texture2D" uid="uid://cxgk1fke2cxl3" path="res://assets/Filler graphics/SpearmanCyan.png" id="5_plrb1"]
[ext_resource type="Texture2D" uid="uid://d3b3e6dcaydux" path="res://assets/Filler graphics/BowmanCyan.png" id="6_ceuyk"]
[ext_resource type="Texture2D" uid="uid://dk8jbh52x55g5" path="res://assets/HP progress.png" id="6_upl7w"]
[ext_resource type="AudioStream" uid="uid://d2k50q5g01nq6" path="res://assets/Music and sounds/VOXScrm_Male Serial Killer Attacking 1_344 Audio_Screaming.wav" id="7_ea3pj"]
[ext_resource type="AudioStream" uid="uid://bousvtdao5ypk" path="res://assets/Music and sounds/Bluezone_BC0277_weapon_smoke_grenade_launcher_003.wav" id="8_lgjtw"]
[ext_resource type="AudioStream" uid="uid://p7407a7nijxb" path="res://assets/Music and sounds/MAGElem_Water Spell Splash Attack Medium 2_RogueWaves_DruidMagic.wav" id="9_qcg3x"]
[ext_resource type="AudioStream" uid="uid://cimijcrb8qlo6" path="res://assets/Music and sounds/SWSH_Sword Slash Impact V2 Assorted 18_DDUMAIS_NONE.wav" id="10_pqpkd"]
[ext_resource type="Texture2D" uid="uid://bfot4op4e0xca" path="res://assets/Filler graphics/whiteshader.png" id="14_7owdi"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hgrnx"]
radius = 7.0
height = 22.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ige3x"]
atlas = ExtResource("1_2khcx")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6odup"]
atlas = ExtResource("1_2khcx")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0t3es"]
atlas = ExtResource("1_2khcx")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbpme"]
atlas = ExtResource("1_2khcx")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3njv"]
atlas = ExtResource("3_t4hes")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_apvof"]
atlas = ExtResource("1_2khcx")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5u0ta"]
atlas = ExtResource("1_2khcx")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_outk4"]
atlas = ExtResource("1_2khcx")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7gbo"]
atlas = ExtResource("1_2khcx")
region = Rect2(96, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_8s8ql"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ige3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6odup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0t3es")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbpme")
}],
"loop": true,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3njv")
}],
"loop": true,
"name": &"Dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_apvof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5u0ta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_outk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7gbo")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_22jsx"]
atlas = ExtResource("4_b7tuk")
region = Rect2(0, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqn2v"]
atlas = ExtResource("4_b7tuk")
region = Rect2(16, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7d1x"]
atlas = ExtResource("4_b7tuk")
region = Rect2(32, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0cst"]
atlas = ExtResource("4_b7tuk")
region = Rect2(48, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o08bj"]
atlas = ExtResource("3_t4hes")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_is8my"]
atlas = ExtResource("4_b7tuk")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rcq2"]
atlas = ExtResource("4_b7tuk")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfke6"]
atlas = ExtResource("4_b7tuk")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0qn8"]
atlas = ExtResource("4_b7tuk")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktwg3"]
atlas = ExtResource("4_b7tuk")
region = Rect2(64, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_qj0x0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_22jsx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqn2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7d1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0cst")
}],
"loop": true,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o08bj")
}],
"loop": true,
"name": &"Dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_is8my")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rcq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfke6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0qn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktwg3")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_8qs2m"]
atlas = ExtResource("5_plrb1")
region = Rect2(32, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ni6f2"]
atlas = ExtResource("5_plrb1")
region = Rect2(32, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkilq"]
atlas = ExtResource("5_plrb1")
region = Rect2(32, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_li8mn"]
atlas = ExtResource("3_t4hes")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_agvri"]
atlas = ExtResource("5_plrb1")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tljd5"]
atlas = ExtResource("5_plrb1")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_srt64"]
atlas = ExtResource("5_plrb1")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntysb"]
atlas = ExtResource("5_plrb1")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1t6h"]
atlas = ExtResource("5_plrb1")
region = Rect2(64, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_5o16s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qs2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ni6f2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkilq")
}],
"loop": true,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_li8mn")
}],
"loop": true,
"name": &"Dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_agvri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tljd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srt64")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntysb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1t6h")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_1vuk7"]
atlas = ExtResource("6_ceuyk")
region = Rect2(0, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4ia5"]
atlas = ExtResource("6_ceuyk")
region = Rect2(16, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uhlw"]
atlas = ExtResource("6_ceuyk")
region = Rect2(32, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdri5"]
atlas = ExtResource("3_t4hes")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbmha"]
atlas = ExtResource("6_ceuyk")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsmqh"]
atlas = ExtResource("6_ceuyk")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xn8td"]
atlas = ExtResource("6_ceuyk")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjoa4"]
atlas = ExtResource("6_ceuyk")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fu2d"]
atlas = ExtResource("6_ceuyk")
region = Rect2(64, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_sxcjt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vuk7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4ia5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uhlw")
}],
"loop": true,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdri5")
}],
"loop": true,
"name": &"Dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbmha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsmqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xn8td")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjoa4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fu2d")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_loc4j"]
size = Vector2(35, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5nmno"]
size = Vector2(200, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_wxh2q"]
radius = 500.0

[sub_resource type="Curve" id="Curve_k5f70"]
min_value = -360.0
max_value = 360.0
_data = [Vector2(0.00892858, 170.182), 0.0, 0.0, 0, 0, Vector2(1, 360), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_8s8ji"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.482, 3), 0.0, 0.0, 0, 0, Vector2(0.982, 8), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_ivogl"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.473214, 0.536364), 0.0, 0.0, 0, 0, Vector2(0.982143, 0.318182), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_26tmx"]
offsets = PackedFloat32Array(0, 0.296296, 0.592593, 0.765432, 0.987654)
colors = PackedColorArray(0.74902, 0, 0.211765, 1, 0.117647, 0.360784, 1, 0.964706, 0.117647, 0.917647, 1, 0.670588, 0.117647, 0.917647, 1, 0, 0.117647, 0.917647, 1, 0.670588)

[sub_resource type="Curve" id="Curve_fxqoi"]
_data = [Vector2(0.009, 0.02), 0.0, 0.0, 0, 0, Vector2(0.486, 0.1), 0.0, 0.0, 0, 0, Vector2(0.965, 0.025), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_41pki"]
offsets = PackedFloat32Array(0, 0.395062, 1)
colors = PackedColorArray(0.686275, 0, 0, 1, 0.811765, 1, 0.396078, 1, 0.921569, 0, 0, 1)

[sub_resource type="Curve" id="Curve_p6yky"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_kp72m"]
offsets = PackedFloat32Array(0, 0.493827)

[sub_resource type="Gradient" id="Gradient_qoqku"]
offsets = PackedFloat32Array(0, 0.414815, 0.777778, 1)
colors = PackedColorArray(0, 0.47451, 1, 1, 0, 1, 1, 1, 0.984314, 0.219608, 0.466667, 1, 0.992157, 0, 0, 1)

[sub_resource type="Gradient" id="Gradient_hv346"]
offsets = PackedFloat32Array(0.037037, 0.533333, 1)
colors = PackedColorArray(1, 0, 0, 1, 1, 0.513726, 0, 1, 1, 1, 0, 1)

[node name="Enemy" type="Area2D" groups=["enemy"]]
script = ExtResource("1_ha54x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_hgrnx")

[node name="Knight" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_8s8ql")
animation = &"Attack"
autoplay = "Walk"

[node name="Swordman" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_qj0x0")
animation = &"Attack"
autoplay = "Walk"

[node name="Spearman" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_5o16s")
animation = &"Attack"
autoplay = "Walk"

[node name="Archer" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_sxcjt")
animation = &"Dead"
autoplay = "Walk"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(10.5, 0)
shape = SubResource("RectangleShape2D_loc4j")
debug_color = Color(0.941176, 0.133333, 0.509804, 0.419608)

[node name="Archer_attack" type="CollisionShape2D" parent="Area2D"]
position = Vector2(100, 0)
shape = SubResource("RectangleShape2D_5nmno")
disabled = true

[node name="hit_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="Undead_targeting system" type="Area2D" parent="."]
visible = false

[node name="Undead collider" type="CollisionShape2D" parent="Undead_targeting system"]
shape = SubResource("CircleShape2D_wxh2q")

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -9.0
offset_top = -17.0
offset_right = 10.0
offset_bottom = 11.0
flat = true

[node name="RightClickButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -9.0
offset_top = -17.0
offset_right = 10.0
offset_bottom = 11.0
button_mask = 2
flat = true

[node name="Hp bar" type="TextureProgressBar" parent="."]
offset_left = -12.0
offset_top = -27.0
offset_right = 12.0
offset_bottom = -17.0
value = 50.0
nine_patch_stretch = true
texture_under = ExtResource("4_1qivc")
texture_over = ExtResource("5_fdwcg")
texture_progress = ExtResource("6_upl7w")

[node name="risen_damage" type="Timer" parent="."]

[node name="Deathsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ea3pj")

[node name="Explosionsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_lgjtw")
volume_db = -40.0

[node name="Raisesound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_qcg3x")
volume_db = -15.0

[node name="Attacksound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_pqpkd")
volume_db = -20.0

[node name="Siphon" type="CPUParticles2D" parent="."]
position = Vector2(6, 10)
emitting = false
amount = 750
lifetime = 2.25
one_shot = true
fixed_fps = 30
draw_order = 1
emission_shape = 3
emission_rect_extents = Vector2(10, 1)
direction = Vector2(-1, 0)
gravity = Vector2(0, -15)
initial_velocity_max = 10.0
angular_velocity_min = 21.36
angular_velocity_max = 106.06
angular_velocity_curve = SubResource("Curve_k5f70")
linear_accel_max = 3.0
linear_accel_curve = SubResource("Curve_8s8ji")
damping_min = 2.94
damping_max = 8.82
scale_amount_max = 1.2
scale_amount_curve = SubResource("Curve_ivogl")
color_ramp = SubResource("Gradient_26tmx")
hue_variation_min = 0.05
hue_variation_max = 0.06

[node name="Fireballhit" type="CPUParticles2D" parent="."]
emitting = false
amount = 100
lifetime = 0.1
one_shot = true
explosiveness = 1.0
lifetime_randomness = 0.85
fixed_fps = 30
draw_order = 1
texture = ExtResource("14_7owdi")
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 200.0
initial_velocity_max = 200.0
angular_velocity_min = 315.0
angular_velocity_max = 320.0
radial_accel_min = -58.83
radial_accel_max = 29.41
damping_min = 72.06
damping_max = 72.06
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_fxqoi")
color_ramp = SubResource("Gradient_41pki")

[node name="Raiseemitters" type="Node2D" parent="."]

[node name="Raise" type="CPUParticles2D" parent="Raiseemitters"]
emitting = false
amount = 500
lifetime = 2.0
one_shot = true
speed_scale = 3.0
fixed_fps = 30
draw_order = 1
emission_shape = 3
emission_rect_extents = Vector2(6, 1)
spread = 0.0
gravity = Vector2(0, -20)
angular_velocity_min = 20.0
angular_velocity_max = 40.0
radial_accel_min = -5.0
radial_accel_max = -5.0
tangential_accel_min = -10.0
tangential_accel_max = 10.0
tangential_accel_curve = SubResource("Curve_p6yky")
damping_max = 10.0
color = Color(0.105882, 0.905882, 0.729412, 1)
color_ramp = SubResource("Gradient_kp72m")
hue_variation_min = -1.0
hue_variation_max = 0.8

[node name="Weakenemitter" type="CPUParticles2D" parent="."]
emitting = false
amount = 200
lifetime = 20.0
fixed_fps = 30
draw_order = 1
emission_shape = 1
emission_sphere_radius = 25.0
spread = 0.0
gravity = Vector2(0, 0)
radial_accel_min = -45.0
radial_accel_max = -45.0
color_ramp = SubResource("Gradient_qoqku")

[node name="WeakenTimer" type="Timer" parent="Weakenemitter"]
wait_time = 4.0
one_shot = true

[node name="Ironmaidenemitter" type="CPUParticles2D" parent="."]
position = Vector2(0, -15)
emitting = false
amount = 50
lifetime = 0.75
fixed_fps = 30
draw_order = 1
emission_shape = 3
emission_rect_extents = Vector2(10, 1)
gravity = Vector2(0, 98)
color_ramp = SubResource("Gradient_hv346")

[node name="IronmaidenTimer" type="Timer" parent="Ironmaidenemitter"]
wait_time = 20.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="hit_cooldown" to="." method="_on_hit_cooldown_timeout"]
[connection signal="gui_input" from="Button" to="." method="_on_button_gui_input"]
[connection signal="gui_input" from="RightClickButton" to="." method="_on_button_gui_input"]
[connection signal="timeout" from="risen_damage" to="." method="_on_risen_damage_timeout"]
[connection signal="timeout" from="Weakenemitter/WeakenTimer" to="." method="_on_weaken_timer_timeout"]
[connection signal="timeout" from="Ironmaidenemitter/IronmaidenTimer" to="." method="_on_ironmaiden_timer_timeout"]
